fixed social icon spacing

--- a/styles/sass/_mediaQueries.scss
+++ b/styles/sass/_mediaQueries.scss
@@ -91,6 +91,7 @@
     @include flex(flex, row, space-between, center);
   }
   footer ul {
-    margin: 0;
+    margin: 0 5%;
+    width: 30%;
   }
 }
